--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
         restart: unless-stopped
         tty: true
         ports:
-            - 80:80
-            - 443:443
+            - "80:80"
+            - "443:443"
         volumes:
             - ./:/var/www
         networks:
@@ -42,8 +42,8 @@ services:
         container_name: npm_app
         image: node:14
         ports:
-            - 3000:3000
-            - 3001:3001
+            - "3000:3000"
+            - "3001:3001"
         working_dir: /var/www
         entrypoint: ['npm']
         volumes:
@@ -57,11 +57,11 @@ services:
         image: mariadb:10.6
         restart: unless-stopped
         ports:
-            - 3306:3306
+            - "3306:3306"
         tty: true
         environment:
             MYSQL_DATABASE: blogs
-            MYSQL_ROOT_PASSWORD: infiniti
+            MYSQL_ROOT_PASSWORD: okt
             MYSQL_USER: admin
             MYSQL_PASSWORD: secret
         networks:
@@ -73,7 +73,7 @@ services:
         image: phpmyadmin
         restart: unless-stopped
         ports:
-            - 8080:80
+            - "8080:80"
         environment:
             - PMA_ARBITRARY=1
             - PMA_HOST=mariadb
