--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -7,7 +7,7 @@ server {
     listen 80 default_server;
     index index.php index.html index.htm;
     listen [::]:80 default_server ipv6only=on;
-    server_name blogs.inf;
+    server_name app.local;
     root /var/www/public/;
 
     location / {
